--- a/index.html
+++ b/index.html
@@ -276,16 +276,11 @@
                         <div class="contact-info-v1">
                             <div class="gsap-reveal d-block">
                                 <span class="d-block contact-info-label">Email</span>
-                                <a href="#" class="contact-info-val">info@unslate.co</a>
+                                <a href="#" class="contact-info-val">guillermo@maestre.com</a>
                             </div>
                             <div class="gsap-reveal d-block">
                                 <span class="d-block contact-info-label">Phone</span>
-                                <a href="#" class="contact-info-val">+12 345 6789 012</a>
-                            </div>
-                            <div class="gsap-reveal d-block">
-                                <span class="d-block contact-info-label">Address</span>
-                                <address class="contact-info-val">273 South Riverview Rd. <br> New York, NY 10011
-                                </address>
+                                <a href="#" class="contact-info-val">+54 11 6789 012</a>
                             </div>
                         </div>
                     </div>
